Fix scrollbar-gutter in globals.css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-  /* scrollbar-gutter: stable; */
+  scrollbar-gutter: stable;
   scroll-behavior: smooth;
 }
 
